/*
 * $Id: ChangeLog,v 1.3903 2005/03/03 20:28:46 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-03 18:15 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * contrib/rdd_ads/make_b32.bat
    * delete rddads.bak on successful build
 
  * source/rtl/tget.prg
    * Minor formatting (tab chars introduced recently)

2005-03-03 12:27 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    + Added BSTR AnsiToBSTR( char *cString )
    * Optimized using new AnsoToBSTR()

  * utils/xbscript/xbs_harb.ch
    * Minor formatting.

2005-03-03 21:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * hrbdll.vc
  * hrbdll.wc
  * hrbdll.gc
  * hrbdll.bc
  * hrbdll.dc
  * hrbdll.pc
  * dll_dc.bat
  * dll_b32.bat
  * dll_pc.bat
  * dll_gc.bat
  * dll_w32.bat
  * dll_vc.bat
    * move creation of harbour.dll to BIN_DIR (more appropriate)
    * create hbtestdll.exe, hbmakedll.exe, hbdocdll.exe, hbrundll.exe and
      xbscriptdll.exe to ensure that harbour.dll is created properly.

2005-03-03 04:50 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.dc
  * makefile.gc
  * makefile.pc
    * modify object file dependencies for hbodbcmt.lib

2005-03-03 03:30 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.bc
    ! _remove_ misleading creation of hbodbcmt.lib. hbodbcmt.lib _was_
      actually hbodbc.lib because it seems it cannot be compiled with MT
      under BCC. hbodbcmt.lib in previous makefile is really an unfunny
      trick (!). :-(

  * make_b32.bat
    ! dllmain.lib not erased in clean build

2005-03-02 09:35 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * makefile.bc
    * Temprarily restored to version 1.40 until Andi provide fixes.
  * source/pp/ppcore.c
    * Corrected type & paste typo, for new HAS and LIKE operators.

2005-03-02 21:20 UTC+0700 Andi Jahja <xharbour@cbn.net.id>